# stellar-cli

./: .gitattributes  .gitignore  .golangci.yml  CONTRIBUTING.md  Cargo.toml  Contract_Invocation_Best_Practices.md  Cookbook.md  Dockerfile  FULL_HELP_DOCS.md  LICENSE  Makefile  NOTICE.txt  POLICY_SIGNERS_PRD.md  README.md  RELEASING.md  SEP-contract-verification.md  SKILL.md  THRESHOLD_PAYMENT_TUTORIAL.md  a_transaction_env.json  action.yml  build.rs  contract.rs  contributing.md  deny.toml  draft-specification.md  entrypoint.sh  example.stellar_txn.json  flake.nix  go.mod  go.sum  install.sh  install_githooks.sh  installer.iss  installer.nsi  issue_EURCV_safe.sh  licenses.rb  non_existant.json  package-lock.json  package.json  prettier.config.js  (+6 more)
cmd/crates/ledger-testing/: Cargo.toml
cmd/crates/ledger-testing/src/: emulator_http_transport.rs  lib.rs  speculos.rs
cmd/crates/soroban-policy-generator/: Cargo.toml  POLICY_SIGNERS_PRD.md
cmd/crates/soroban-policy-generator/src/: error.rs  lib.rs  types.rs
cmd/crates/soroban-policy-generator/src/policy/: amount_based.rs  function_based.rs  function_based_test.rs  mod.rs  multi_sig.rs  smart_wallet.rs  smart_wallet_test.rs  time_based.rs
cmd/crates/soroban-policy-generator/src/templates/: mod.rs  policy.rs.hbs
cmd/crates/soroban-policy-generator/templates/: policy.rs.hbs
cmd/crates/soroban-policy-generator/templates/smart-wallet/: policy.rs.hbs
cmd/crates/soroban-rpc/: Cargo.toml  README.md
cmd/crates/soroban-rpc/src/: lib.rs  log.rs  txn.rs
cmd/crates/soroban-rpc/src/fixtures/: event_response.json
cmd/crates/soroban-spec-tools/: Cargo.toml  README.md
cmd/crates/soroban-spec-tools/src/: contract.rs  event.rs  filter.rs  lib.rs  schema.rs  test_utils.rs  utils.rs  verify.rs  wasm.rs
cmd/crates/soroban-spec-tools/tests/: contract_sanitize.rs
cmd/crates/soroban-spec-tools/tests/fixtures/: control_characters.wasm
cmd/crates/soroban-test/: Cargo.toml  README.md  build.rs
cmd/crates/soroban-test/src/: lib.rs  module.rs  wasm.rs
cmd/crates/soroban-test/tests/it/: arg_parsing.rs  build.rs  config.rs  container.rs  contract_sandbox.rs  custom.rs  custom_types.rs  dotenv.rs  emulator.rs  hello_world.rs  help.rs  init.rs  integration.rs  integration_and_sandbox.rs  invoke_sandbox.rs  lab.rs  lab_test_transaction_envelope.txt  log.rs  main.rs  message.rs  plugin.rs  rpc_provider.rs  secure_store.rs  strkey.rs  tx.rs  util.rs  verify.rs  version.rs
cmd/crates/stellar-config/: Cargo.toml  README.md
cmd/crates/stellar-config/src/: lib.rs  locator.rs  network.rs  secret.rs
cmd/crates/stellar-config/src/network/: passphrase.rs
cmd/crates/stellar-ledger/: Cargo.toml  README.md
cmd/crates/stellar-ledger/apps/: demoAppS.elf  demoAppX.elf
cmd/crates/stellar-ledger/src/: app.rs  docker.rs  draft-app.rs  emulator.rs  emulator_test_support.rs  emulator_tests.rs  hd_path.rs  lib.rs  newapp.rs  signer.rs  speculos.rs  transport_zemu_http.rs  types.rs
cmd/crates/stellar-ledger/src/emulator_test_support/: http_transport.rs  speculos.rs  util.rs
cmd/crates/stellar-ledger/src/test_fixtures/: mod.rs  speculos.rs
cmd/crates/stellar-ledger/tests/: emulator_tests.rs
cmd/crates/stellar-ledger/tests/test/: emulator_tests.rs  main.rs  (+2 more)
cmd/crates/stellar-multisig-plugin/: Cargo.toml
cmd/crates/stellar-multisig-plugin/src/: main.rs
cmd/crates/stellar-old-multisig-plugin/: Cargo.toml
cmd/crates/stellar-old-multisig-plugin/src/: main.rs
cmd/doc-gen/: Cargo.toml  README.md
cmd/doc-gen/src/: main.rs
cmd/soroban-cli/: Cargo.toml  README.md  build.rs  example_contracts.list
cmd/soroban-cli/.soroban/identities/: test_id.toml
cmd/soroban-cli/docker/: Dockerfile
cmd/soroban-cli/src/: assembled.rs  auth.rs  auth_mode.rs  cli.rs  color.rs  completion.rs  config_dir_check.rs  deploy.rs  env_vars.rs  events.rs  fee.rs  fixed_point.rs  get_spec.rs  install.rs  invoke.rs  jsonrpc.rs  key.rs  lib.rs  log.rs  main.rs  network.rs  optimize.rs  output.rs  print.rs  read.rs  resources.rs  rpc.rs  rpc_client.rs  self_outdated_check.rs  serve.rs  signer.rs  snapshot.rs  soroban_data.rs  strval.rs  test_contract_id_consistency.rs  test_utils.rs  toid.rs  tx.rs  txn.rs  upgrade_check.rs  (+3 more)
cmd/soroban-cli/src/commands/: completion.rs  custom.rs  doctor.rs  events.rs  fee_stats.rs  fund.rs  global.rs  init.rs  licenses.rs  mod.rs  plugin.rs  policy.rs  snapshot.rs  txn_result.rs  version.rs
cmd/soroban-cli/src/config/: address.rs  alias.rs  args.rs  data.rs  key.rs  ledger.rs  ledger_file.rs  location.rs  locator.rs  mod.rs  network.rs  sc_address.rs  secret.rs  self_outdated_check.rs  sign_with.rs  signer_key.rs  token.rs  upgrade_check.rs  utils.rs
cmd/soroban-cli/src/contract/: bindings.rs  deploy.rs  inspect.rs  install.rs  invoke.rs  mod.rs  optimize.rs  read.rs
cmd/soroban-cli/src/fixtures/: transaction_env.json
cmd/soroban-cli/src/lab/: mod.rs
cmd/soroban-cli/src/log/: auth.rs  budget.rs  contract_event.rs  cost.rs  diagnostic_event.rs  event.rs  events.rs  footprint.rs  host_event.rs  log_event.rs  resources.rs  simulation_event.rs  txn_error.rs  txn_response_error.rs
cmd/soroban-cli/src/rpc/: mod.rs  transaction.rs  txn.rs
cmd/soroban-cli/src/signer/: auth.rs  keyring.rs  ledger.rs  mod.rs  secure_store.rs  secure_store_entry.rs  types.rs  validation.rs
cmd/soroban-cli/src/toid/: mod.rs
cmd/soroban-cli/src/token/: create.rs  mod.rs  wrap.rs
cmd/soroban-cli/src/tx/: builder.rs
cmd/soroban-cli/src/utils/: contract_spec.rs
cmd/soroban-cli/templates/policy/: Cargo.toml
cmd/soroban-cli/tests/it/: arg_parsing.rs  config.rs  custom_types.rs  e2e_rpc_server.rs  invoke_sandbox.rs  main.rs  util.rs
cmd/soroban-rpc/lib/preflight/: Cargo.toml
cmd/stellar-cli/: Cargo.toml  README.md
generated_policy/: Cargo.toml
generated_policy/aaa/: Cargo.toml
generated_policy/aaa/src/: lib.rs
generated_policy/do_math/src/: lib.rs
generated_policy/limits/src/: lib.rs
generated_policy/maxx_100/src/: lib.rs
test-wasms/invoker_account_exists/: Cargo.toml
test-wasms/invoker_account_exists/src/: lib.rs
(+882 files in other folders)
