[workspace]
resolver = "2"
members = [
    "cmd/soroban-cli",
    "cmd/crates/*",
    "cmd/crates/soroban-test/tests/fixtures/test-wasms/*",
    "cmd/crates/soroban-test/tests/fixtures/hello",
]
default-members = ["cmd/soroban-cli", "cmd/crates/soroban-spec-tools", "cmd/crates/soroban-test"]
exclude = ["cmd/crates/soroban-test/tests/fixtures/hello"]

[workspace.package]
version = "20.3.1"
rust-version = "1.74.0"

[workspace.dependencies.soroban-env-host]
version = "=20.2.1"
# git = "https://github.com/stellar/rs-soroban-env"
# rev = "1bfc0f2a2ee134efc1e1b0d5270281d0cba61c2e"
# path = "../rs-soroban-env/soroban-env-host"

[workspace.dependencies.soroban-simulation]
version = "=20.2.1"
# git = "https://github.com/stellar/rs-soroban-env"
# rev = "1bfc0f2a2ee134efc1e1b0d5270281d0cba61c2e"
# path = "../rs-soroban-env/soroban-simulation"

[workspace.dependencies.soroban-spec]
version = "=20.3.1"
# git = "https://github.com/stellar/rs-soroban-sdk"
# rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de"
# path = "../rs-soroban-sdk/soroban-spec"

[workspace.dependencies.soroban-spec-rust]
version = "=20.3.1"
# git = "https://github.com/stellar/rs-soroban-sdk"
# rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de"
# path = "../rs-soroban-sdk/soroban-spec-rust"

[workspace.dependencies.soroban-spec-json]
version = "20.3.1"
path = "./cmd/crates/soroban-spec-json"

[workspace.dependencies.soroban-spec-typescript]
version = "20.3.1"
path = "./cmd/crates/soroban-spec-typescript"

[workspace.dependencies.soroban-spec-tools]
version = "20.3.1"
path = "./cmd/crates/soroban-spec-tools"

[workspace.dependencies.soroban-sdk]
version = "=20.3.1"
# git = "https://github.com/stellar/rs-soroban-sdk"
# rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de"

[workspace.dependencies.soroban-token-sdk]
version = "=20.3.1"
# git = "https://github.com/stellar/rs-soroban-sdk"
# rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de"

[workspace.dependencies.soroban-ledger-snapshot]
version = "=20.3.1"
# git = "https://github.com/stellar/rs-soroban-sdk"
# rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de"

[workspace.dependencies.soroban-cli]
version = "20.3.1"
path = "cmd/soroban-cli"

[workspace.dependencies.soroban-rpc]
version = "=20.3.3"
# git = "https://github.com/stellar/soroban-rpc"

[workspace.dependencies.stellar-xdr]
version = "=20.1.0"
default-features = true

[workspace.dependencies]
stellar-strkey = "0.0.7"
sep5 = "0.0.2"
base64 = "0.21.2"
thiserror = "1.0.46"
sha2 = "0.10.7"
ethnum = "1.3.2"
hex = "0.4.3"
itertools = "0.10.0"
async-trait = "0.1.76"

serde-aux = "4.1.2"
serde_json = "1.0.82"
serde = "1.0.82"

clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = "4.1.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
which = "4.4.0"
wasmparser = "0.90.0"
termcolor = "1.1.3"
termcolor_output = "1.0.1"
ed25519-dalek = "2.0.0"

# networking 
http = "1.0.0"
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
tokio = "1.28.1"

# [patch."https://github.com/stellar/rs-soroban-env"]
# soroban-env-host = { path = "../rs-soroban-env/soroban-env-host/" }
# [patch."https://github.com/stellar/rs-soroban-sdk"]
# soroban-spec = { path = "../rs-soroban-sdk/soroban-spec/" }
# soroban-token-spec = { path = "../rs-soroban-sdk/soroban-token-spec/" }
# soroban-sdk = { path = "../rs-soroban-sdk/soroban-sdk/" }
# [patch."https://github.com/stellar/rs-stellar-xdr"]
# stellar-xdr = { path = "../rs-stellar-xdr/" }

[profile.test-wasms]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
