[workspace]
resolver = "2"
members = [
    "cmd/stellar-cli",
    "cmd/soroban-cli",
    "cmd/crates/*",
    "cmd/crates/soroban-test/tests/fixtures/test-wasms/*",
    "cmd/crates/soroban-test/tests/fixtures/hello",
]
default-members = ["cmd/soroban-cli", "cmd/crates/soroban-spec-tools", "cmd/crates/soroban-test"]
exclude = ["cmd/crates/soroban-test/tests/fixtures/hello"]

[workspace.package]
version = "21.0.0"
rust-version = "1.74.0"

[workspace.dependencies.soroban-env-host]
version = "=21.1.2"

[workspace.dependencies.soroban-simulation]
version = "21.1.2"

[workspace.dependencies.soroban-spec]
version = "=21.1.1"

[workspace.dependencies.soroban-spec-rust]
version = "=21.1.1"

[workspace.dependencies.soroban-spec-json]
version = "=21.0.0"
path = "./cmd/crates/soroban-spec-json"

[workspace.dependencies.soroban-spec-typescript]
version = "21.0.0"
path = "./cmd/crates/soroban-spec-typescript"

[workspace.dependencies.soroban-spec-tools]
version = "21.0.0"
path = "./cmd/crates/soroban-spec-tools"

[workspace.dependencies.soroban-sdk]
version = "=21.1.1"

[workspace.dependencies.soroban-token-sdk]
version = "=21.1.1"

[workspace.dependencies.soroban-ledger-snapshot]
version = "=21.1.1"

[workspace.dependencies.soroban-cli]
version = "=21.0.0"
path = "cmd/soroban-cli"

[workspace.dependencies.soroban-rpc]
package = "stellar-rpc-client"
version = "21.3.1"

[workspace.dependencies.stellar-xdr]
version = "21.1.0"
default-features = true

[workspace.dependencies]
stellar-strkey = "0.0.8"
sep5 = "0.0.3"
base64 = "0.21.2"
thiserror = "1.0.46"
sha2 = "0.10.7"
ethnum = "1.3.2"
hex = "0.4.3"
itertools = "0.10.0"
async-trait = "0.1.76"
bollard = "0.16.0"

serde-aux = "4.1.2"
serde_json = "1.0.82"
serde = "1.0.82"

clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = "4.1.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
which = "4.4.0"
wasmparser = "0.90.0"
directories = "5.0.1"
ulid = "1.1"
termcolor = "1.1.3"
termcolor_output = "1.0.1"
ed25519-dalek = ">= 2.1.1"

# networking 
http = "1.0.0"
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
tokio = "1.28.1"

[profile.test-wasms]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
