[workspace]
resolver = "2"
members = [
    "cmd/stellar-cli",
    "cmd/soroban-cli",
    "cmd/crates/*",
    "cmd/crates/soroban-test/tests/fixtures/test-wasms/*",
    "cmd/crates/soroban-test/tests/fixtures/hello",
    "cmd/crates/soroban-test/tests/fixtures/bye",
]
default-members = [
    "cmd/soroban-cli",
    "cmd/crates/soroban-spec-tools",
    "cmd/crates/soroban-test",
]
exclude = [
    "cmd/crates/soroban-test/tests/fixtures/hello",
    "cmd/crates/soroban-test/tests/fixtures/bye",
    "cmd/crates/soroban-test/tests/fixtures/eth_abi",
]

[workspace.package]
version = "22.2.0"
rust-version = "1.81.0"

# Dependencies located in this repo:
[workspace.dependencies.soroban-cli]
version = "=22.2.0"
path = "cmd/soroban-cli"

[workspace.dependencies.soroban-spec-json]
version = "=22.2.0"
path = "./cmd/crates/soroban-spec-json"

[workspace.dependencies.soroban-spec-typescript]
version = "22.2.0"
path = "./cmd/crates/soroban-spec-typescript"

[workspace.dependencies.soroban-spec-tools]
version = "22.2.0"
path = "./cmd/crates/soroban-spec-tools"

# Dependencies from the rs-stellar-xdr repo:
[workspace.dependencies.stellar-xdr]
version = "=22.1.0"
default-features = true

# Dependencies from the rs-soroban-sdk repo:
[workspace.dependencies.soroban-spec]
version = "=22.0.4"

[workspace.dependencies.soroban-spec-rust]
version = "=22.0.4"

[workspace.dependencies.soroban-sdk]
version = "=22.0.4"

[workspace.dependencies.soroban-token-sdk]
version = "=22.0.4"

[workspace.dependencies.soroban-ledger-snapshot]
version = "=22.0.4"

# Dependencies from the rs-stellar-rpc-client repo:
[workspace.dependencies.soroban-rpc]
package = "stellar-rpc-client"
version = "=22.0.0"

[workspace.dependencies.stellar-ledger]
version = "=22.2.0"
path = "cmd/crates/stellar-ledger"

# Dependencies from elsewhere shared by crates:
[workspace.dependencies]
stellar-strkey = "0.0.11"
sep5 = "0.0.4"
base64 = "0.21.2"
thiserror = "1.0.46"
sha2 = "0.10.7"
ethnum = "1.3.2"
hex = "0.4.3"
itertools = "0.10.0"
async-trait = "0.1.76"
bollard = "0.16.0"
serde-aux = "4.1.2"
serde_json = "1.0.82"
serde = "1.0.82"
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = "4.1.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
which = "4.4.0"
wasmparser = "0.116.1"
directories = "5.0.1"
ulid = "1.1"
termcolor = "1.1.3"
termcolor_output = "1.0.1"
ed25519-dalek = ">= 2.1.1"
http = "1.0.0"
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
walkdir = "2.5.0"
toml_edit = "0.22.20"
toml = "0.8.19"
reqwest = "0.12.7"
# testing
predicates = "3.1.2"
testcontainers = { version = "0.20.1" }
httpmock = "0.7.0"

[profile.test-wasms]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-panic-unwind]
inherits = 'release'
panic = 'unwind'
