[package]
name = "doc-gen"
description = "Stellar CLI generator of markdown help documentation"
homepage = "https://github.com/stellar/stellar-cli"
repository = "https://github.com/stellar/stellar-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version.workspace = true
publish = false

[features]
additional-libs = ["soroban-cli/additional-libs"]

[dependencies]
soroban-cli = { workspace = true }
# clap-markdown from https://github.com/ConnorGray/clap-markdown/pull/48
clap-markdown = { version = "0.1.5", git = "https://github.com/ConnorGray/clap-markdown", rev = "42956b342cef3325d9060fc43995d595e7c8aa66" }
