[package]
name = "soroban-cli"
description = "Soroban CLI"
homepage = "https://github.com/stellar/soroban-cli"
repository = "https://github.com/stellar/soroban-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "0.9.1"
edition = "2021"
rust-version = "1.71"
autobins = false
default-run = "soroban"

[[bin]]
name = "soroban"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[[bin]]
name = "doc-gen"
path = "src/bin/doc-gen.rs"
required-features = ["clap-markdown"]

[lib]
name = "soroban_cli"
path = "src/lib.rs"
doctest = false

[features]
default = []
opt = ["dep:wasm-opt"]

[dependencies]
soroban-env-host = { workspace = true }
soroban-spec = { workspace = true }
soroban-spec-json = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-spec-tools = { workspace = true }
soroban-spec-typescript = { workspace = true }
soroban-ledger-snapshot = { workspace = true }
stellar-strkey = { workspace = true }
soroban-sdk = { workspace = true }
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
base64 = { workspace = true }
thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
serde-aux = "4.1.2"
hex = { workspace = true }
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap_complete = "4.1.4"
rand = "0.8.5"
wasmparser = { workspace = true }
sha2 = "0.10.6"
csv = "1.1.6"
ed25519-dalek = "1.0.1"
jsonrpsee-http-client = "0.18.1"
jsonrpsee-core = "0.18.1"
http = "0.2.9"
regex = "1.6.0"
wasm-opt = { version = "0.113.0", optional = true }
chrono = "0.4.23"
rpassword = "7.2.0"
dirs = "4.0.0"
toml = "0.5.9"
itertools = "0.10.5"
shlex = "1.1.0"
sep5 = { workspace = true }
ethnum = { workspace = true }
clap-markdown = { version = "0.1.3", optional = true }
which = { workspace = true, features = ["regex"] }
strsim = "0.10.0"
heck = "0.4.1"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
cargo_metadata = "0.15.4"
pathdiff = "0.2.1"

[build-dependencies]
crate-git-revision = "0.0.4"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.5"
