[package]
name = "soroban-cli"
description = "Soroban CLI"
homepage = "https://github.com/stellar/stellar-cli"
repository = "https://github.com/stellar/stellar-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version = "21.4.1"
edition = "2021"
rust-version.workspace = true
autobins = false
default-run = "soroban"

[[bin]]
name = "stellar"
path = "src/bin/stellar.rs"

[[bin]]
name = "soroban"
path = "src/bin/soroban.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[[bin]]
name = "doc-gen"
path = "src/bin/doc-gen.rs"
required-features = ["clap-markdown"]

[lib]
name = "soroban_cli"
path = "src/lib.rs"
doctest = false

[features]
default = []
opt = ["dep:wasm-opt"]

[dependencies]
stellar-xdr = { workspace = true, features = ["cli"] }
soroban-env-host = { workspace = true }
soroban-spec = { workspace = true }
soroban-spec-json = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-spec-tools = { workspace = true }
soroban-spec-typescript = { workspace = true }
soroban-ledger-snapshot = { workspace = true }
stellar-strkey = { workspace = true }
soroban-sdk = { workspace = true }
soroban-rpc = { workspace = true }

clap = { workspace = true, features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-aux = { workspace = true }
hex = { workspace = true }
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util", "compat"] }
termcolor = { workspace = true }
termcolor_output = { workspace = true }
rand = "0.8.5"
wasmparser = { workspace = true }
sha2 = { workspace = true }
csv = "1.1.6"
ed25519-dalek = { workspace = true }
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
hyper = "0.14.27"
hyper-tls = "0.5"
http = "0.2.9"
regex = "1.6.0"
wasm-opt = { version = "0.114.0", optional = true }
chrono = "0.4.27"
rpassword = "7.2.0"
dirs = "4.0.0"
toml = "0.5.9"
itertools = "0.10.5"
shlex = "1.1.0"
sep5 = { workspace = true }
ethnum = { workspace = true }
clap-markdown = { version = "0.1.4", optional = true }
which = { workspace = true, features = ["regex"] }
strsim = "0.10.0"
heck = "0.5.0"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
cargo_metadata = "0.18.1"
pathdiff = "0.2.1"
dotenvy = "0.15.7"
directories = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
strum = "0.17.1"
strum_macros = "0.17.1"
gix = { version = "0.58.0", default-features = false, features = [
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
] }
ureq = { version = "2.9.1", features = ["json"] }
async-compression = { version = "0.4.12", features = [ "tokio", "gzip" ] }

tempfile = "3.8.1"
toml_edit = "0.21.0"
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
bollard = { workspace = true }
futures-util = "0.3.30"
futures = "0.3.30"
home = "0.5.9"
flate2 = "1.0.30"
bytesize = "1.3.0"
humantime = "2.1.0"
phf = { version = "0.11.2", features = ["macros"] }
crossterm = "0.27.0"
# For hyper-tls
[target.'cfg(unix)'.dependencies]
openssl = { version = "=0.10.55", features = ["vendored"] }

[build-dependencies]
crate-git-revision = "0.0.4"
serde.workspace = true
thiserror.workspace = true
ureq = { version = "2.9.1", features = ["json"] }


[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.5"
walkdir = "2.5.0"
