[package]
name = "soroban-cli"
description = "Soroban CLI"
homepage = "https://github.com/stellar/stellar-cli"
repository = "https://github.com/stellar/stellar-cli"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version.workspace = true
autobins = false
default-run = "soroban"

[[bin]]
name = "stellar"
path = "src/bin/stellar.rs"

[[bin]]
name = "soroban"
path = "src/bin/soroban.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[[bin]]
name = "doc-gen"
path = "src/bin/doc-gen.rs"
required-features = ["clap-markdown"]

[lib]
name = "soroban_cli"
path = "src/lib.rs"
doctest = false

[features]
default = []
version_lt_23 = []
version_gte_23 = []
opt = ["dep:wasm-opt"]

[dependencies]
stellar-xdr = { workspace = true, features = ["cli"] }
soroban-spec = { workspace = true }
soroban-spec-json = { workspace = true }
soroban-spec-rust = { workspace = true }
soroban-spec-tools = { workspace = true }
soroban-spec-typescript = { workspace = true }
soroban-ledger-snapshot = { workspace = true }
stellar-strkey = { workspace = true }
soroban-sdk = { workspace = true }
soroban-rpc = { workspace = true }
clap = { workspace = true, features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }
clap_complete = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-aux = { workspace = true }
hex = { workspace = true }
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "io-util", "compat"] }
termcolor = { workspace = true }
termcolor_output = { workspace = true }
rand = "0.8.5"
wasmparser = { workspace = true }
sha2 = { workspace = true }
csv = "1.1.6"
# zeroize feature ensures that all sensitive data is zeroed out when dropped
ed25519-dalek = { workspace = true, features = ["zeroize"] }
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
    "blocking",
    "stream",
] }
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
regex = "1.6.0"
wasm-opt = { version = "0.116.1", optional = true }
chrono = { version = "0.4.27", features = ["serde"] }
rpassword = "7.2.0"
toml = { workspace = true }
itertools = "0.10.5"
shlex = "1.1.0"
sep5 = { workspace = true }
ethnum = { workspace = true }
clap-markdown = { version = "0.1.4", optional = true }
which = { workspace = true, features = ["regex"] }
strsim = "0.11.1"
heck = "0.5.0"
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
cargo_metadata = "0.18.1"
pathdiff = "0.2.1"
dotenvy = "0.15.7"
directories = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
strum = "0.17.1"
strum_macros = "0.17.1"
async-compression = { version = "0.4.12", features = ["tokio", "gzip"] }
shell-escape = "0.1.5"
tempfile = "3.8.1"
toml_edit = { workspace = true }
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
bollard = { workspace = true }
futures-util = "0.3.30"
futures = "0.3.30"
home = "0.5.9"
flate2 = "1.0.30"
bytesize = "1.3.0"
humantime = "2.1.0"
phf = { version = "0.11.2", features = ["macros"] }
semver = "1.0.0"
glob = "0.3.1"
fqdn = "0.3.12"
open = "5.3.0"
url = "2.5.2"
wasm-gen = "0.1.4"
zeroize = "1.8.1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1.5.2"
serde_with = "3.11.0"
jsonc-parser = { version = "0.26.2", features = ["cst"] }


[build-dependencies]
crate-git-revision = "0.0.6"
serde.workspace = true
thiserror.workspace = true


[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = { workspace = true }
walkdir = "2.5.0"
mockito = "1.5.0"
