[package]
name = "test_invoker_account_exists"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.64"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "0.1.0"

[dev-dependencies]
soroban-sdk = {version = "0.1.0", features = ["testutils"]}
