[package]
name = "soroban-policy-generator"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
description = "A tool for generating Stellar policy contracts"

[dependencies]
soroban-sdk = { workspace = true }
soroban-spec = { workspace = true }
stellar-xdr = { workspace = true }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
itertools = "0.12"
handlebars = "4.3"
inquire = "0.6" 