[package]
name = "soroban-policy-generator"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
homepage = "https://github.com/stellar/soroban-cli"
repository = "https://github.com/stellar/soroban-cli"
description = "Policy contract generator for Soroban smart contracts"

[dependencies]
soroban-sdk = { workspace = true }
soroban-spec-tools = { workspace = true }
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stellar-xdr = { workspace = true }
sha2 = "0.10"
itertools = "0.12"
handlebars = "4.3"
inquire = "0.6" 