[package]
name = "soroban-policy-generator"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
homepage = "https://github.com/stellar/soroban-cli"
repository = "https://github.com/stellar/soroban-cli"
description = "Policy contract generator for Soroban smart contracts"

[dependencies]
soroban-sdk = { workspace = true }
soroban-spec-tools = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stellar-xdr = { workspace = true }
sha2 = { workspace = true }
itertools = { workspace = true }
handlebars = { workspace = true }
inquire = { workspace = true }
smart-wallet-interface = { git = "https://github.com/kalepail/passkey-kit", branch = "next" } 