[package]
name = "soroban-rpc"
description = "Soroban RPC client for rust"
homepage = "https://github.com/stellar/soroban-tools"
repository = "https://github.com/stellar/soroban-tools"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version.workspace = true
autobins = false


[lib]
crate-type = ["rlib"]


[dependencies]
soroban-sdk = { version = "=20.3.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de" }
soroban-spec-tools = { version = "20.2.0", path = "../soroban-spec-tools" }
soroban-env-host = { version = "=20.2.0", git = "https://github.com/stellar/rs-soroban-env", rev = "1bfc0f2a2ee134efc1e1b0d5270281d0cba61c2e" }
stellar-strkey = "0.0.7"
stellar-xdr = { version = "=20.1.0", default-features = true, features = ["curr", "std", "serde"] }
soroban-spec = { version = "=20.3.0", git = "https://github.com/stellar/rs-soroban-sdk", rev = "4aef54ff9295c2fca4c5b9fbd2c92d0ff99f67de" }

termcolor = "1.1.3"
termcolor_output = "1.0.1"
clap = { version = "4.1.8", features = ["derive", "env", "deprecated", "string"] }
serde_json = "1.0.82"
serde-aux = "4.1.2"
itertools = "0.10.0"
ethnum = "1.3.2"
hex = "0.4.3"
wasmparser = "0.90.0"
base64 = "0.21.2"
thiserror = "1.0.46"
serde = "1.0.82"
tokio = "1.28.1"
sha2 = "0.10.7"
ed25519-dalek = "2.0.0"
tracing = "0.1.40"

# networking
jsonrpsee-http-client = "0.20.1"
jsonrpsee-core = "0.20.1"
http = "1.0.0"


[dev-dependencies]
which = "4.4.0"
