[package]
name = "soroban-test"
description = "Soroban Test Framework"
homepage = "https://github.com/stellar/soroban-test"
repository = "https://github.com/stellar/soroban-test"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
readme = "README.md"
version.workspace = true
edition = "2021"
rust-version.workspace = true
autobins = false


[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
soroban-spec = { workspace = true }
soroban-spec-tools = { workspace = true }
soroban-ledger-snapshot = { workspace = true }
stellar-strkey = { workspace = true }
sep5 = { workspace = true }
soroban-cli = { workspace = true }
soroban-rpc = { workspace = true }

thiserror = "1.0.31"
sha2 = "0.10.6"
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = { workspace = true }
fs_extra = "1.3.0"
toml = { workspace = true }
home = "0.5.9"

[dev-dependencies]
serde_json = "1.0.93"
which = { workspace = true }
tokio = "1.28.1"
walkdir = "2.4.0"
ulid.workspace = true
ed25519-dalek = { workspace = true }
hex = { workspace = true }
httpmock = { workspace = true }

[features]
it = []
