[package]
name = "stellar-ledger"
description = "Handle Stellar signing with Ledger device"
homepage = "https://github.com/stellar/soroban-tools"
repository = "https://github.com/stellar/soroban-tools"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
soroban-spec = { workspace = true }
thiserror = "1.0.32"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"
sha2 = "0.9.9"
soroban-env-host = { workspace = true }
ed25519-dalek = { workspace = true }
stellar-strkey = { workspace = true }
ledger-transport-hid = "0.10.0"
ledger-transport = "0.10.0"
sep5.workspace = true
slip10 = "0.4.3"
tracing = { workspace = true }
hex.workspace = true
byteorder = "1.5.0"
bollard = { workspace = true }
home = "0.5.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
soroban-rpc.workspace = true
phf = { version = "0.11.2", features = ["macros"] }
futures = "0.3.30"
async-trait = { workspace = true }

[dependencies.stellar-xdr]
workspace = true
features = ["curr", "std", "serde"]

[dev-dependencies]
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
once_cell = "1.19.0"
pretty_assertions = "1.2.1"
serial_test = "3.0.0"
httpmock = "0.7.0-rc.1"
test-case = "*"
testcontainers = "0.20.1"


[features]
emulator-tests = []